--- a/about.html
+++ b/about.html
@@ -10,186 +10,165 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Genral Law </title>
-    
+    <title>General Law </title>
+    <style>
+        .img {
+            border-radius: 200%;
+        }
+    </style>
+
 
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
-    <a class="navbar-brand" href="#">GenralLaw </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/GenralLaw/Home.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/GneralLaw/News.html">News </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://blogpoint6.blogspot.com/GneralLaw/Blog.html">Blog</a>
-        </li>
-
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/GenralLaw/about.html">about </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/GneralLaw/contact.html">Contact </a>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-      <div class="mx-2">
-        <button class="btn btn-success" data-toggle="modal" data-target="#LoginModal">Login</button>
-        <button class="btn btn-success" data-toggle="modal" data-target="#SignUpModal">SignUp</button>
-      </div>
-    </div>
-  </nav>
-
-
-
-
-  <!-- Modal -->
-  <div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title" id="LoginModalLabel">Login into</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Submit</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
-  <!-- Modal -->
-  <div class="modal fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="SignUpModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="SignUpModalLabel">get to the account</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Confirm Password</label>
-              <input type="Confirm password" class="form-control" id="exampleInputConfirmPassword1">
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Name</label>
-              <input type="Name" class="form-control" id="exampleInputName">
-            </div>
-            <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-          </form>
-
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://source.unsplash.com/1500x700/?law" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Welcome ab initio</h1>
-          <p>HEAVEN FOR LAWYERS</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://source.unsplash.com/1500x700/?law books" class="d-block w-100" alt="...">
-        1
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Welcome ab initio</h1>
-          <p>HEAVEN FOR LAWYERS</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="https://source.unsplash.com/1500x700/?law court" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Welcome ab initio</h1>
-          <p>HEAVEN FOR LAWYERS</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-
- 
+        <a class="navbar-brand" href="#">GeneralLaw </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/GeneralLaw/Home.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-              
+                <li class="nav-item">
+                    <a class="nav-link" href="/GeneralLaw/News.html">News </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://blogpoint6.blogspot.com/GeneralLaw/Blog.html">Blog</a>
+                </li>
+
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/GeneralLaw/AboutUs.html">AboutUs </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/GeneralLaw/Contact.html">Contact </a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Signup</button>
             </form>
+            <div class="mx-2">
+                <button class="btn btn-success" data-toggle="modal" data-target="#LoginModal">Login</button>
+                <button class="btn btn-success" data-toggle="modal" data-target="#SignUpModal">SignUp</button>
+            </div>
         </div>
-      </nav>
+    </nav>
 
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="LoginModalLabel">Login into</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="SignUpModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="SignUpModalLabel">get to the account</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Confirm Password</label>
+                            <input type="Confirm password" class="form-control" id="exampleInputConfirmPassword1">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Name</label>
+                            <input type="Name" class="form-control" id="exampleInputName">
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+    <div class="wp-block-jetpack-layout-grid-column wp-block-jetpack-layout-grid__padding-none">
+        <h2>OUR FOUNDER</h2>
+        <img src="abhishek.jpg" alt="generallaw" style="width:200px">
+
+        <p>GeneralLaw founded by Abhishek chaturvedi and abhay singhal in 2019. He is a legal enthusiast, pursuing Legum
+            Baccalaureus from
+            University of Rajasthan, Jaipur. His vision to create a global socialising platform for entities of law
+            set up in the form of GenralLaw. </p>
+    </div>
+    </div>
+
+
+    <div class="footer-bottom">
+        &copy; GenralLaw.com | Designed by abhishek developer
+      </div>
+    </div>
+  
 
 
 
